<resources>
    <string name="app_name">colorblocker</string>
    <string name="edit_photos">Edit Photos and Videos Like a Pro in Just One Click</string>
    <string name="try_now">Try Now</string>
    <string name="dashboard">Dashboard</string>
    <string name="cameraEdit">Edit</string>
    <string name="contact">profile</string>
    <string name="my_studio">My Studio</string>
    <string name="arrow_explore"><![CDATA[>>>>]]></string>
    <string name="random">Random</string>
    <string name="recent">Recent</string>
    <string name="tewntyImages">Frequnet</string>
    <string name="alliImages">All Images</string>
    <string name="stringis">No Data found! Click to find some more,,,,</string>
    <string name="retry">Retry!</string>
    <string name="click_to_edit">Click here to add \n Image to continue to edit</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="note">Note!</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>