<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="showProgress"
            type="Boolean" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:background="@drawable/bg_bottom_sheet_dialog"
        android:layout_marginBottom="10dp">


        <TextView
            android:id="@+id/txtHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/editNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounder_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHint">

            <EditText
                android:id="@+id/etNickName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/enter_file_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/green_color_picker"
                android:textColorHint="@android:color/darker_gray" />
        </RelativeLayout>



        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/red_color_picker"
            android:text="@string/cancel"
            android:layout_marginTop="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNickName" />


        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="18dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green_color_picker"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/editNickName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>